sites/fast-website/src/app/css/style.css
@import "./root.css";
@import "./base.css";
@import "./site-wrapper.css";
@import "./side-nav-container.css";
@import "./header.css";
@import "./logo.css";
@import "./section-decoration.css";
@import "./footer.css";

.section-badge {
    --badge-fill-primary: var(--neutral-fill-focus);
    --badge-color-primary: var(--accent-foreground-rest);
    margin-bottom: calc(var(--base-height-multiplier) * 1px);
}

.section-badge::part(control) {
    font-weight: bold;
    letter-spacing: 0.12em;
    padding: calc(var(--design-unit) * 1px) calc(var(--design-unit) * 4px);
}

.section,
.fast-frame-section {
    align-items: center;
    box-sizing: border-box;
    color: var(--neutral-foreground-rest);
    display: flex;
    grid-column: span 2;
    justify-content: center;
    margin: var(--section-height-spacing-mobile);
    padding: 0 20px;
}

.fast-frame-section {
    min-height: 85vmin;
    padding: 0;
}

@media screen and (min-width: 900px) {
    .section,
    .fast-frame-section {
        grid-column: 2;
        margin: var(--section-height-spacing);
        padding: 0;
    }

    .community-section {
        padding: 0;
    }
}

.fast-frame-header {
    padding: 0 20px;
}

.section-content {
    display: flex;
    flex-flow: row wrap;
    align-items: center;
    justify-content: center;
    min-height: 300px;
    margin: 20px 0;
    width: 100%;
}

.section-heading-hero,
.section-heading,
.section-paragraph {
    margin: 0 0 calc(var(--base-height-multiplier) * 2px);
}

.section-heading-hero {
    font-size: var(--type-ramp-plus-6-font-size);
    line-height: var(--type-ramp-plus-6-line-height);
}

.section-heading {
    font-size: var(--type-ramp-plus-5-font-size);
    line-height: var(--type-ramp-plus-5-line-height);
}

.section-paragraph-hero {
    font-size: var(--type-ramp-plus-2-font-size);
    line-height: var(--type-ramp-plus-2-line-height);
    margin: 0 0 calc(var(--base-height-multiplier) * 4px);
}

.section-paragraph {
    font-size: var(--type-ramp-plus-1-font-size);
    line-height: var(--type-ramp-plus-1-line-height);
}

.footer-divider {
    grid-column: 2;
}

.community-subsection {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 1rem;
    width: 100%;
}

.community-subsection h3 {
    min-width: 270px;
    text-align: center;
    font-size: var(--type-ramp-plus-2-font-size);
}

.community-subsection .description {
    text-align: center;
    max-width: 500px;
    margin-bottom: 2rem;
}

.community-subsection a {
    color: white;
    text-decoration: none;
    border-bottom: 1px solid white;
    padding-bottom: 1px;
}

.community-subsection a:hover {
    border-bottom-color: var(--accent-foreground-rest);
}

@media screen and (max-width: 899px) {
    .hero-section {
        margin-top: 150px;
    }

    .section-heading-hero,
    .section-heading {
        font-size: var(--type-ramp-plus-4-font-size);
        line-height: var(--type-ramp-plus-4-line-height);
    }

    site-navigation .anchor-wrapper {
        display: flex;
        flex-direction: column;
        position: absolute;
        top: 100%;
        left: 0;
        width: 100%;
        height: calc(100vh - 94px);
        background-color: var(--fill-color);
        opacity: 0.95;
        transform: translateY(-100%);
        transition:
        transform 300ms ease-in-out 0s,
        visibility 0s linear 300ms;
        visibility: hidden;
        z-index: 0;
    }

    site-navigation .anchor-wrapper li {
        margin-bottom: 20px;
    }

    site-navigation .anchor-wrapper ::part(content) {
        font-size:var(--type-ramp-plus-2-font-size);
        color: var(--neutral-foreground-rest);
    }

    .site-navigation.debounce .anchor-wrapper {
        transition-duration: 0s;
    }

    site-navigation.opened .anchor-wrapper {
        transform: translateY(0);
        transition-delay: 0s;
        visibility: visible;
    }
}

